ingress/simple-fanout/service.yaml
#simple-fanout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  type: NodePort
  selector:
    type: foo-demo
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: NodePort
  selector:
    type: bar-demo
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8080
