ingress/simple-fanout/ingress.yaml
#simple-fanout/ingress.yaml.yamml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: foo.com
      http:
        paths:
          - backend:
              service:
                name: foo-service
                port:
                  number: 8000
            pathType: Prefix
            path: /
    - host: bar.com
      http:
        paths:
          - backend:
              service:
                name: bar-service
                port:
                  number: 8000
            pathType: Prefix
            path: /
